--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
-    color: #333;
-    background-color: #fff;
+  background-color: var(--bg-color);
+  color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -238,9 +238,16 @@ h3 {
 /* --- Botones --- */
 
 :root {
-    --boton-color: #ff0000;
-    --boton-hover-color: #ff2626;
+    --boton-color: #ff4c4c;
+    --boton-hover-color: #ff0707;
+    --bg-color: white;
+    --text-color: black;
 }
+
+[data-theme="dark"] {
+    --bg-color: black;
+    --text-color: white;
+  }
 
 .btn {
     background-color: var(--boton-color);
